# Enigma_AI_Bot

./: .env.example  README.md  app.py  database_setup.sql  main.py  mcp_startup.py  pyproject.toml  requirements.txt
StableDiffusion( for colab)/: StableDiffusion.ipynb
config/: settings.py
mcp/: __init__.py  client.py  mcp_client.py
mcp/client/: session.py  stdio.py
mcp/servers/: database_server.py  image_server.py  vector_server.py  web_search_server.py
routes/: __init__.py  api_routes.py  auth_routes.py  chat_routes.py  enhanced_api_routes.py  image_routes.py  mcp_routes.py
services/: chat_service.py  enhanced_chat_service.py  enhanced_llm_service.py  file_service.py  image_service.py  llm_service.py  mcp_service.py
static/css/: login.css  main.css  themes.css
static/js/: chat.js  login.js  theme-switcher.js
templates/: base.html  chat.html  img_gen.html  login.html
utils/: __init__.py  auth.py  database.py  document_processor.py  image_processor.py  llm_client.py  vector_store.py
